Add mysql and nginx install yum timeout for with async.

--- a/inventory.ini
+++ b/inventory.ini
@@ -38,6 +38,7 @@ deploy_dir = /home/easy/ds
 ansible_user = easy
 
 # In the unfamiliar situation, it is not recommended to modify the following configurations.
+# TODO 暂时只支持mysql，pg作者还没开发，敬请谅解
 db_type = mysql
 db_name = dolphinscheduler
 db_username = easy
