--- a/devops/inventory.ini
+++ b/devops/inventory.ini
@@ -1,32 +1,33 @@
 ## DolphinScheduler Part
 [servers]
-192.167.8.131 host_ip=192.167.8.131 host_name=easy1
-192.167.8.132 host_ip=192.167.8.132 host_name=easy2
-192.167.8.133 host_ip=192.167.8.133 host_name=easy3
+192.167.8.141 host_ip=192.167.8.141 host_name=easy1
+#192.167.8.142 host_ip=192.167.8.142 host_name=easy2
+#192.167.8.143 host_ip=192.167.8.143 host_name=easy3
 
 [db_servers]
-192.167.8.131
+192.167.8.141
 
 [zookeeper_servers]
-192.167.8.131 myid=1
-192.167.8.132 myid=2
-192.167.8.133 myid=3
+192.167.8.141 myid=1
+#192.167.8.142 myid=2
+#192.167.8.143 myid=3
 
 [master_servers]
-192.167.8.131
+192.167.8.141
 
 [worker_servers]
-192.167.8.132
-192.167.8.133
+192.167.8.141
+#192.167.8.142
+#192.167.8.143
 
 [api_servers]
-192.167.8.131
+192.167.8.141
 
 [alert_servers]
-192.167.8.131
+192.167.8.141
 
 [nginx_servers]
-192.167.8.131
+192.167.8.141
 
 ## Global variables
 [all:vars]
