--- a/devops/roles/frontend/tasks/nginx.yml
+++ b/devops/roles/frontend/tasks/nginx.yml
@@ -11,16 +11,16 @@
   set_fact:
     nginx_conf: "{{ {} | with_default_dicts(nginx_custom, conf_default) | update_default_dicts }}"
 
-- name: ds front create related folders
+- name: ds frontend create related folders
   file: name={{ item }} state=directory mode=755 recurse=yes
   with_items:
     - "{{ ds_front_deploy_path }}"
 
-- name: ds front install
+- name: ds frontend install
   unarchive:
     src={{ pkg_dir }}/apache-dolphinscheduler-incubating-{{ dolphinscheduler_front_version }}.tar.gz
     dest={{ ds_front_dir }}
     mode=755
 
-- name: ds front copy conf
+- name: ds frontend copy conf
   template: src=dolphinscheduler.conf.j2 dest={{ nginx_vhost }}/dolphinscheduler.conf mode=755
