Change code location, modify plugin path.

--- a/devops/ansible.cfg
+++ b/devops/ansible.cfg
@@ -59,4 +59,4 @@ callback_whitelist = help
 bin_ansible_callbacks = True
 callback_needs_whitelist = False
 callback_whitelist = timer, profile_tasks
-callback_plugins = /home/easy/ds-yibasuo/callback_plugins
+callback_plugins = /callback_plugins
