--- a/devops/roles/frontend/tasks/main.yml
+++ b/devops/roles/frontend/tasks/main.yml
@@ -1,9 +1,26 @@
 ---
 
-- name: exists nginx
-  shell: "source ~/.bash_profile && source /etc/profile && nginx -V"
-  register: nginx_pkg
+- name: load custom
+  include_vars:
+    file={{ playbook_dir }}/conf/nginx.yml name=nginx_custom
 
-- include_tasks: nginx.yml
-  when:
-    - '"command not found" in nginx_pkg.stdout'
+- name: load default config
+  include_vars: file=default.yml name=conf_default
+
+- name: combine final config
+  set_fact:
+    nginx_conf: "{{ {} | with_default_dicts(nginx_custom, conf_default) | update_default_dicts }}"
+
+- name: ds frontend create related folders
+  file: name={{ item }} state=directory mode=755 recurse=yes
+  with_items:
+    - "{{ ds_front_deploy_path }}"
+
+- name: ds frontend install
+  unarchive:
+    src={{ pkg_dir }}/apache-dolphinscheduler-incubating-{{ dolphinscheduler_front_version }}.tar.gz
+    dest={{ ds_front_dir }}
+    mode=755
+
+- name: ds frontend copy conf
+  template: src=dolphinscheduler.conf.j2 dest={{ nginx_vhost }}/dolphinscheduler.conf mode=755
