Change ignore, add string to byte black technology, add ini read/write with inefficient way.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
+# yibasuo related
+*.log
+test/*
+ds-yibasuo.exe
+
+# ansible related
 devops/retry_files/
 devops/downloads/
-
 .vagrant/
 *.retry
 *.pyc
+
+# ide related
 .vscode
-.DS_Store
-*.log
 .idea
-test/*
+
+# OS related
+.DS_Store
