Add cluster code.

--- a/devops/hosts.ini
+++ b/devops/hosts.ini
@@ -1,8 +1,6 @@
 [servers]
 192.167.8.141
-#192.167.8.142
-#192.167.8.143
 
 [all:vars]
 username = easy
-ansible_ssh_pass = '$pwd'
+ansible_ssh_pass = easy
